crates/api/tests/snapshots/snapshots__series_season_random.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "version_id": "ev1"
  },
  "status": 200
}
