crates/api/tests/snapshots/snapshots__series_seasons.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": [
    {
      "added_at": "2023-11-14T22:13:25Z",
      "artwork": {
        "backdrop": {
          "base": "/images/se1-backdrop",
          "widths": [
            480,
            960
          ]
        },
        "poster": {
          "base": "/images/se1-poster",
          "widths": [
            180,
            480,
            960
          ]
        }
      },
      "id": "se1",
      "number": 1,
      "overview": null,
      "series_id": "s1",
      "title": "Season 1",
      "updated_at": "2023-11-14T22:13:25Z"
    }
  ],
  "status": 200
}
