crates/api/tests/snapshots/snapshots__server_info.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "features": [
      "hls",
      "trickplay",
      "transcoding",
      "link_codes",
      "api_tokens"
    ],
    "profile_version": 1,
    "version": "[version]"
  },
  "status": 200
}
