crates/api/tests/snapshots/snapshots__session_progress.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "heartbeat_interval_s": 10
  },
  "status": 200
}
