crates/api/tests/snapshots/snapshots__session_seek.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "manifest_url": "[manifest_url]",
    "mode": "direct",
    "selected": {
      "audio_track": 0,
      "subtitle_delivery": null,
      "subtitle_track": null
    },
    "session_id": "[session_id]"
  },
  "status": 200
}
