crates/api/tests/snapshots/snapshots__titles_batch.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": [
    {
      "added_at": "2023-11-14T22:13:21Z",
      "artwork": {
        "backdrop": {
          "base": "/images/m1-backdrop",
          "widths": [
            480,
            960
          ]
        },
        "poster": {
          "base": "/images/m1-poster",
          "widths": [
            180,
            480,
            960
          ]
        }
      },
      "content_rating": {
        "code": "PG-13",
        "system": "MPAA"
      },
      "id": "m1",
      "overview": "overview",
      "runtime_minutes": 100,
      "title": "Alpha m1",
      "type": "movie",
      "year": 2020
    }
  ],
  "status": 200
}
