crates/api/tests/snapshots/snapshots__user_change_password_forbidden.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "forbidden",
      "message": "not permitted for this user"
    }
  },
  "status": 403
}
