crates/api/tests/snapshots/snapshots__user_history.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "items": [
      {
        "completed": false,
        "last_watched_at": "2023-11-14T22:13:30Z",
        "play_count": 2,
        "title": {
          "id": "m1",
          "type": "movie"
        },
        "user_id": "u1",
        "watched": true
      }
    ],
    "limit": 50,
    "offset": 0,
    "total": 1
  },
  "status": 200
}
